--- a/random.html
+++ b/random.html
@@ -37,7 +37,7 @@
 		<div id="covid-description" align="center">
 			COVID-19 Data Analysis
 		</div>
-		<div id="detail1" align="left">Completed in 2020 for the Kaggle Covid-19 Open Research Dataset Competition. This Jupyter notebook contains an analysis of the large volume of text data (consisting primarily of research papers related to COVID-19 and other coronaviruses) provided by Kaggle. In it, I implement Latent Dirichlet Allocation to identify papers pertaining to public health control measures, and combine the results with other datasets to perform two case studies.
+		<div id="detail1" align="left">Completed in 2020 for the Kaggle COVID-19 Open Research Dataset Competition. This Jupyter notebook contains an analysis of the large volume of text data (consisting primarily of research papers related to COVID-19 and other coronaviruses) provided by Kaggle. In it, I utilize Latent Dirichlet Allocation to identify papers pertaining to public health control measures, and combine the results with other datasets to perform two case studies.
 		</div>
 		<img src="./assets/img/covid.png" id="covid-pic" alt="covid-guide">
 	</div>
