--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 	    </div>
 
 	    <div class="description">
-	    	<b>Learning</b> is the core of my being. An undergraduate nearing the end of my tenure at UC Berkeley, I spend my academic hours getting lost in mathematical theory and its applications to computer science - most notably studying data science and machine learning. My passions lie at the intersection of technical knowledge and social connection, and I have a particular penchant for teaching computer science.
+	    	<b>Learning</b> is the core of my being. An undergraduate nearing the end of my tenure at UC Berkeley, I spend my academic hours getting lost in mathematical theory and its applications to computer science - most notably studying data visualization and human-computer interaction. My passions lie at the intersection of technical knowledge and social connection, and I have a particular penchant for teaching computer science.
 	    </div>
 	</div>
 
