Added Medium link

--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
 
 	<div id="synopsis" align="center">
 		Feel free to reach out to me via email 
-		at murtaza5152.ali@gmail.com, or find me 
-		on LinkedIn <a href="https://www.linkedin.com/in/murtaza-ali-878973165/" target="_blank">here</a>.
-
+		at murtaza5152.ali@gmail.com. Additionally, connect with me 
+		on <a href="https://www.linkedin.com/in/murtaza-ali-878973165/" target="_blank">LinkedIn</a>, and check
+		out some of my writing on <a href="https://murtaza5152-ali.medium.com/" target="_blank">Medium.</a>
 	</div>
 
 <script src="assets/scripts/contact.js"></script>
