--- a/random.html
+++ b/random.html
@@ -13,7 +13,7 @@
   			<div class = "links">
 				
 				<a href="contact.html" class="nav-link" align="center">Contact</a>		
-				<a href="random.html" class="nav-link" align="center">Random</a>
+				<a href="random.html" class="nav-link" align="center">Research</a>
 				<a href="teaching.html" class="nav-link" align="center">Teaching</a>				
 				<a href="about.html" class="nav-link" align="center">About</a>
 	  			
