Edited teaching page for 61A

--- a/teaching.html
+++ b/teaching.html
@@ -29,11 +29,12 @@
 	</div>
 
 	<div id="ugsi-details", align="center">
-		I have taught CS 10: The Beauty and Joy of 
-		Computing for two years now. I focus on ensuring 
-		all of my students leave with a solid foundation 
-		in programming and a genuine confidence in their 
-		own abilities. Scroll down to see my teaching 
+		Over the past two years, I have taught CS 10: The 
+		Beauty and Joy of Computing and CS 61A: The
+		Structure and Interpretation of Computer Programs.
+		I focus on ensuring all of my students leave my class with a 
+		solid foundation in programming and a genuine confidence 
+		in their own abilities. Scroll down to see my teaching 
 		philosophy and various guides and lessons I have 
 		authored for the course.
 	</div>
@@ -63,7 +64,7 @@
 	</div>
 
 	<div id="guide-details", align="center">
-		Originally written for and used by CS 10 students.
+		Originally written for and used by Berkeley students.
 	</div>
 
 		<div id="background">
