Updated teaching page to generalize for 61A as well

--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,7 @@
 		solid foundation in programming and a genuine confidence 
 		in their own abilities. Scroll down to see my teaching 
 		philosophy and various guides and lessons I have 
-		authored for the course.
+		authored for the courses.
 	</div>
 
 	<div id="student" align="center">
